# Snake

./: .gitignore  CMakeLists.txt  app  main.cpp  scoreboard
src/: main.cpp
src/Game/: GameBoard.cpp  GameBoard.hpp
src/Game/Snake/: Snake.cpp  Snake.hpp
src/Levels/: levels.cpp  levels.hpp
src/control/: controlFuncs.cpp  controlFuncs.hpp
src/core/: GameApplication.cpp  GameApplication.hpp  GraphicsManager.cpp  GraphicsManager.hpp
src/data/: ScoreBoard.cpp  ScoreBoard.hpp
src/game/: Food.cpp  Food.hpp  Game.cpp  Game.hpp  Snake.cpp  Snake.hpp
src/scoreBoard/: ScoreBoard.cpp  ScoreBoard.hpp
src/ui/: MainMenu.cpp  MainMenu.hpp
src/view/: graphicFuncs.cpp  graphicFuncs.hpp  mainMenu.cpp  mainMenu.hpp
